--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.2",
+    "@angular/cli": "1.2.7",
     "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.45",
+    "@angular/language-service": "^4.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
