--- a/package.json
+++ b/package.json
@@ -8,51 +8,53 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "6.1.3",
-    "@angular/cdk": "6.4.5",
-    "@angular/common": "6.1.3",
-    "@angular/compiler": "6.1.3",
-    "@angular/core": "6.1.3",
-    "@angular/flex-layout": "6.0.0-beta.15",
-    "@angular/forms": "6.1.3",
-    "@angular/http": "6.1.3",
-    "@angular/material": "6.4.5",
-    "@angular/platform-browser": "6.1.3",
-    "@angular/platform-browser-dynamic": "6.1.3",
-    "@angular/router": "6.1.3",
-    "components-font-awesome": "4.6.3",
-    "core-js": "^2.4.1",
+    "@angular/animations": "7.1.2",
+    "@angular/cdk": "7.1.1",
+    "@angular/common": "7.1.2",
+    "@angular/compiler": "7.1.2",
+    "@angular/core": "7.1.2",
+    "@angular/flex-layout": "7.0.0-beta.19",
+    "@angular/forms": "7.1.2",
+    "@angular/http": "7.1.2",
+    "@angular/material": "7.1.1",
+    "@angular/platform-browser": "7.1.2",
+    "@angular/platform-browser-dynamic": "7.1.2",
+    "@angular/router": "7.1.2",
+    "components-font-awesome": "5.4.2",
+    "core-js": "^2.5.4",
     "jquery": "3.3.1",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.3.3",
     "toastr": "2.1.4",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.3",
-    "@angular/cli": "6.1.4",
-    "@angular/compiler-cli": "6.1.3",
-    "@angular/language-service": "6.1.3",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "7.1.2",
+    "@angular/compiler-cli": "7.1.2",
+    "@angular/language-service": "7.1.2",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "3.3.24",
+    "@types/node": "~8.9.4",
     "@types/toastr": "2.1.35",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "2.9.2"
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.6"
   }
 }
