--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/toastr/toastr.js"
-            ]
+            ],
+            "es5BrowserSupport": true
           },
           "configurations": {
             "production": {
