--- a/package.json
+++ b/package.json
@@ -14,47 +14,45 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "7.2.15",
+    "@angular/animations": "8.1.0",
     "@angular/cdk": "7.3.7",
-    "@angular/common": "7.2.15",
-    "@angular/compiler": "7.2.15",
-    "@angular/core": "7.2.15",
+    "@angular/common": "8.1.0",
+    "@angular/compiler": "8.1.0",
+    "@angular/core": "8.1.0",
     "@angular/flex-layout": "7.0.0-beta.24",
-    "@angular/forms": "7.2.15",
-    "@angular/http": "7.2.15",
+    "@angular/forms": "8.1.0",
     "@angular/material": "7.3.7",
-    "@angular/platform-browser": "7.2.15",
-    "@angular/platform-browser-dynamic": "7.2.15",
-    "@angular/router": "7.2.15",
+    "@angular/platform-browser": "8.1.0",
+    "@angular/platform-browser-dynamic": "8.1.0",
+    "@angular/router": "8.1.0",
     "components-font-awesome": "5.4.2",
-    "core-js": "^2.5.4",
     "jquery": "3.4.1",
     "rxjs": "^6.5.2",
     "toastr": "2.1.4",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "7.3.9",
-    "@angular/compiler-cli": "7.2.15",
-    "@angular/language-service": "7.2.15",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "~0.801.0",
+    "@angular/cli": "8.1.0",
+    "@angular/compiler-cli": "8.1.0",
+    "@angular/language-service": "8.1.0",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "3.3.29",
     "@types/node": "~8.9.4",
     "@types/toastr": "2.1.37",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.4"
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.5"
   }
 }
