Upgrade Angular packages

--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,8 @@
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
-              ]
+              ],
+              "statsJson": false
             }
           }
         },
