--- a/angular.json
+++ b/angular.json
@@ -120,8 +120,13 @@
               "devServerTarget": "angular-heroes:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "angular-heroes"
 }
