--- a/package.json
+++ b/package.json
@@ -14,35 +14,42 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "8.2.13",
+    "@angular/animations": "8.2.14",
     "@angular/cdk": "8.2.3",
-    "@angular/common": "8.2.13",
-    "@angular/compiler": "8.2.13",
-    "@angular/core": "8.2.13",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/fire": "^5.4.1",
     "@angular/flex-layout": "8.0.0-beta.27",
-    "@angular/forms": "8.2.13",
+    "@angular/forms": "8.2.14",
     "@angular/material": "8.2.3",
-    "@angular/platform-browser": "8.2.13",
-    "@angular/platform-browser-dynamic": "8.2.13",
-    "@angular/router": "8.2.13",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "components-font-awesome": "5.9.0",
+    "firebase": ">= 5.5.7 <8",
     "jquery": "3.4.1",
-    "rxjs": "^6.5.3",
+    "rxjs": "^6.5.4",
     "toastr": "2.1.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.17",
-    "@angular/cli": "8.3.17",
-    "@angular/compiler-cli": "8.2.13",
-    "@angular/language-service": "8.2.13",
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+    "@angular-devkit/build-angular": "~0.803.24",
+    "@angular/cli": "8.3.24",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "3.3.31",
+    "@types/jquery": "3.3.32",
     "@types/node": "~8.9.4",
     "@types/toastr": "2.1.37",
     "codelyzer": "^5.0.1",
+    "firebase-tools": "^7.12.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
