--- a/package.json
+++ b/package.json
@@ -14,39 +14,39 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/cdk": "8.2.3",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/fire": "^5.4.1",
-    "@angular/flex-layout": "8.0.0-beta.27",
-    "@angular/forms": "8.2.14",
-    "@angular/material": "8.2.3",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular/animations": "9.1.11",
+    "@angular/cdk": "9.2.4",
+    "@angular/common": "9.1.11",
+    "@angular/compiler": "9.1.11",
+    "@angular/core": "9.1.11",
+    "@angular/fire": "^6.0.0",
+    "@angular/flex-layout": "9.0.0-beta.31",
+    "@angular/forms": "9.1.11",
+    "@angular/material": "9.2.4",
+    "@angular/platform-browser": "9.1.11",
+    "@angular/platform-browser-dynamic": "9.1.11",
+    "@angular/router": "9.1.11",
     "components-font-awesome": "5.9.0",
-    "firebase": ">= 5.5.7 <8",
-    "jquery": "3.4.1",
+    "firebase": "7.15.3",
+    "jquery": "3.5.1",
     "rxjs": "^6.5.4",
     "toastr": "2.1.4",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "@angular-devkit/build-angular": "~0.803.24",
-    "@angular/cli": "8.3.24",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.901.9",
+    "@angular/cli": "9.1.9",
+    "@angular/compiler-cli": "9.1.11",
+    "@angular/language-service": "9.1.11",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "3.3.32",
-    "@types/node": "~8.9.4",
-    "@types/toastr": "2.1.37",
-    "codelyzer": "^5.0.1",
-    "firebase-tools": "^7.12.0",
+    "@types/jquery": "3.5.0",
+    "@types/node": "^12.11.1",
+    "@types/toastr": "2.1.38",
+    "codelyzer": "^5.1.2",
+    "firebase-tools": "^8.4.3",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
@@ -60,6 +60,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
