Upgrade to Angular 11

--- a/package.json
+++ b/package.json
@@ -14,52 +14,52 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "9.1.11",
-    "@angular/cdk": "9.2.4",
-    "@angular/common": "9.1.11",
-    "@angular/compiler": "9.1.11",
-    "@angular/core": "9.1.11",
-    "@angular/fire": "^6.0.0",
-    "@angular/flex-layout": "9.0.0-beta.31",
-    "@angular/forms": "9.1.11",
-    "@angular/material": "9.2.4",
-    "@angular/platform-browser": "9.1.11",
-    "@angular/platform-browser-dynamic": "9.1.11",
-    "@angular/router": "9.1.11",
+    "@angular/animations": "11.0.5",
+    "@angular/cdk": "11.0.3",
+    "@angular/common": "11.0.5",
+    "@angular/compiler": "11.0.5",
+    "@angular/core": "11.0.5",
+    "@angular/fire": "6.1.4",
+    "@angular/flex-layout": "11.0.0-beta.33",
+    "@angular/forms": "11.0.5",
+    "@angular/material": "11.0.3",
+    "@angular/platform-browser": "11.0.5",
+    "@angular/platform-browser-dynamic": "11.0.5",
+    "@angular/router": "11.0.5",
     "components-font-awesome": "5.9.0",
     "firebase": "7.15.3",
     "jquery": "3.5.1",
     "rxjs": "^6.5.4",
     "toastr": "2.1.4",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "@angular-devkit/build-angular": "~0.901.9",
-    "@angular/cli": "9.1.9",
-    "@angular/compiler-cli": "9.1.11",
-    "@angular/language-service": "9.1.11",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular/cli": "11.0.5",
+    "@angular/compiler-cli": "11.0.5",
+    "@angular/language-service": "11.0.5",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "3.5.0",
     "@types/node": "^12.11.1",
     "@types/toastr": "2.1.38",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "firebase-tools": "^8.4.3",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.5"
   }
 }
