refactor: remove protractor tests

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "dependencies": {
     "@angular/animations": "11.2.7",
