--- a/package.json
+++ b/package.json
@@ -34,13 +34,22 @@
   "devDependencies": {
     "@angular-devkit/architect": "0.1102.6",
     "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular-eslint/builder": "4.3.0",
+    "@angular-eslint/eslint-plugin": "4.3.0",
+    "@angular-eslint/eslint-plugin-template": "4.3.0",
+    "@angular-eslint/schematics": "4.3.0",
+    "@angular-eslint/template-parser": "4.3.0",
     "@angular/cli": "11.2.6",
     "@angular/compiler-cli": "11.2.7",
     "@angular/language-service": "11.2.7",
+    "@babel/eslint-plugin": "^7.14.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "^2.24.2",
     "firebase-tools": "^8.4.3",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
@@ -54,7 +63,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.0.5"
   }
 }
