--- a/package.json
+++ b/package.json
@@ -13,42 +13,42 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "11.2.7",
-    "@angular/cdk": "11.2.6",
-    "@angular/common": "11.2.7",
-    "@angular/compiler": "11.2.7",
-    "@angular/core": "11.2.7",
+    "@angular/animations": "12.2.6",
+    "@angular/cdk": "12.2.6",
+    "@angular/common": "12.2.6",
+    "@angular/compiler": "12.2.6",
+    "@angular/core": "12.2.6",
     "@angular/fire": "6.1.4",
-    "@angular/flex-layout": "11.0.0-beta.33",
-    "@angular/forms": "11.2.7",
-    "@angular/material": "11.2.6",
-    "@angular/platform-browser": "11.2.7",
-    "@angular/platform-browser-dynamic": "11.2.7",
-    "@angular/router": "11.2.7",
+    "@angular/flex-layout": "12.0.0-beta.35",
+    "@angular/forms": "12.2.6",
+    "@angular/material": "12.2.6",
+    "@angular/platform-browser": "12.2.6",
+    "@angular/platform-browser-dynamic": "12.2.6",
+    "@angular/router": "12.2.6",
     "components-font-awesome": "5.9.0",
     "firebase": "7.15.3",
     "rxjs": "^6.5.4",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1102.6",
-    "@angular-devkit/build-angular": "~0.1102.6",
-    "@angular-eslint/builder": "4.3.0",
-    "@angular-eslint/eslint-plugin": "4.3.0",
-    "@angular-eslint/eslint-plugin-template": "4.3.0",
-    "@angular-eslint/schematics": "4.3.0",
-    "@angular-eslint/template-parser": "4.3.0",
-    "@angular/cli": "11.2.6",
-    "@angular/compiler-cli": "11.2.7",
-    "@angular/language-service": "11.2.7",
+    "@angular-devkit/architect": "0.1202.6",
+    "@angular-devkit/build-angular": "~12.2.6",
+    "@angular-eslint/builder": "^12.0.0",
+    "@angular-eslint/eslint-plugin": "^12.0.0",
+    "@angular-eslint/eslint-plugin-template": "^12.0.0",
+    "@angular-eslint/schematics": "12.5.0",
+    "@angular-eslint/template-parser": "^12.0.0",
+    "@angular/cli": "12.2.6",
+    "@angular/compiler-cli": "12.2.6",
+    "@angular/language-service": "12.2.6",
     "@babel/eslint-plugin": "^7.14.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "eslint-plugin-import": "^2.24.2",
     "firebase-tools": "^8.4.3",
     "fuzzy": "^0.1.3",
@@ -63,6 +63,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.3.5"
   }
 }
