refactor: align workspace with Angular CLI 12

--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
     "@angular/router": "12.2.6",
     "components-font-awesome": "5.9.0",
     "firebase": "7.15.3",
-    "rxjs": "^6.5.4",
-    "tslib": "^2.0.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1202.6",
     "@angular-devkit/build-angular": "~12.2.6",
     "@angular-eslint/builder": "^12.0.0",
     "@angular-eslint/eslint-plugin": "^12.0.0",
@@ -41,10 +40,8 @@
     "@angular-eslint/template-parser": "^12.0.0",
     "@angular/cli": "12.2.6",
     "@angular/compiler-cli": "12.2.6",
-    "@angular/language-service": "12.2.6",
     "@babel/eslint-plugin": "^7.14.5",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
@@ -54,15 +51,12 @@
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.1",
+    "jasmine-core": "~3.8.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
   }
 }
