--- a/package.json
+++ b/package.json
@@ -13,54 +13,55 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "12.2.6",
-    "@angular/cdk": "12.2.6",
-    "@angular/common": "12.2.6",
-    "@angular/compiler": "12.2.6",
-    "@angular/core": "12.2.6",
-    "@angular/fire": "7.0.4",
-    "@angular/flex-layout": "12.0.0-beta.35",
-    "@angular/forms": "12.2.6",
-    "@angular/material": "12.2.6",
-    "@angular/platform-browser": "12.2.6",
-    "@angular/platform-browser-dynamic": "12.2.6",
-    "@angular/router": "12.2.6",
+    "@angular/animations": "13.3.11",
+    "@angular/cdk": "13.3.9",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/fire": "7.3.0",
+    "@angular/flex-layout": "13.0.0-beta.38",
+    "@angular/forms": "13.3.11",
+    "@angular/material": "13.3.9",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
     "components-font-awesome": "5.9.0",
     "firebase": "^9.0.0",
-    "rxjs": "~6.6.0",
+    "rxfire": "^6.0.0",
+    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "rxfire": "^6.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.6",
-    "@angular-eslint/builder": "^12.0.0",
-    "@angular-eslint/eslint-plugin": "^12.0.0",
-    "@angular-eslint/eslint-plugin-template": "^12.0.0",
-    "@angular-eslint/schematics": "12.5.0",
-    "@angular-eslint/template-parser": "^12.0.0",
-    "@angular/cli": "12.2.6",
-    "@angular/compiler-cli": "12.2.6",
+    "@angular-devkit/architect": "^0.1303.7",
+    "@angular-devkit/build-angular": "~13.3.7",
+    "@angular-eslint/builder": "^13.2.1",
+    "@angular-eslint/eslint-plugin": "^13.2.1",
+    "@angular-eslint/eslint-plugin-template": "^13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "^13.2.1",
+    "@angular/cli": "13.3.7",
+    "@angular/compiler-cli": "13.3.11",
     "@babel/eslint-plugin": "^7.14.5",
-    "@types/jasmine": "~3.8.0",
+    "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
-    "eslint": "^7.26.0",
-    "eslint-plugin-import": "^2.24.2",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-deprecation": "^1.3.2",
+    "eslint-plugin-import": "2.25.2",
     "firebase-tools": "^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "~4.0.0",
+    "jsonc-parser": "^3.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5",
-    "@angular-devkit/architect": "^0.1200.0",
     "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0"
+    "typescript": "~4.6.4"
   }
 }
