build: upgrade to Angular 14

--- a/angular.json
+++ b/angular.json
@@ -115,8 +115,9 @@
       }
     }
   },
-  "defaultProject": "angular-heroes",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
