--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
   },
+  "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.11",
-    "@angular/cdk": "13.3.9",
-    "@angular/common": "13.3.11",
-    "@angular/compiler": "13.3.11",
-    "@angular/core": "13.3.11",
-    "@angular/fire": "7.3.0",
-    "@angular/flex-layout": "13.0.0-beta.38",
-    "@angular/forms": "13.3.11",
-    "@angular/material": "13.3.9",
-    "@angular/platform-browser": "13.3.11",
-    "@angular/platform-browser-dynamic": "13.3.11",
-    "@angular/router": "13.3.11",
+    "@angular/animations": "14.0.5",
+    "@angular/cdk": "14.0.4",
+    "@angular/common": "14.0.5",
+    "@angular/compiler": "14.0.5",
+    "@angular/core": "14.0.5",
+    "@angular/fire": "7.4.1",
+    "@angular/flex-layout": "14.0.0-beta.40",
+    "@angular/forms": "14.0.5",
+    "@angular/material": "14.0.4",
+    "@angular/platform-browser": "14.0.5",
+    "@angular/platform-browser-dynamic": "14.0.5",
+    "@angular/router": "14.0.5",
     "firebase": "^9.0.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.5.0",
@@ -32,35 +34,33 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1303.7",
-    "@angular-devkit/build-angular": "~13.3.7",
-    "@angular-eslint/builder": "^13.2.1",
-    "@angular-eslint/eslint-plugin": "^13.2.1",
-    "@angular-eslint/eslint-plugin-template": "^13.2.1",
-    "@angular-eslint/schematics": "13.2.1",
-    "@angular-eslint/template-parser": "^13.2.1",
-    "@angular/cli": "13.3.7",
-    "@angular/compiler-cli": "13.3.11",
+    "@angular-devkit/build-angular": "^14.0.5",
+    "@angular-eslint/builder": "^14.0.2",
+    "@angular-eslint/eslint-plugin": "^14.0.2",
+    "@angular-eslint/eslint-plugin-template": "^14.0.2",
+    "@angular-eslint/schematics": "14.0.2",
+    "@angular-eslint/template-parser": "^14.0.2",
+    "@angular/cli": "14.0.5",
+    "@angular/compiler-cli": "14.0.5",
     "@babel/eslint-plugin": "^7.14.5",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^8.2.0",
+    "@types/jasmine": "~4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
     "eslint-plugin-deprecation": "^1.3.2",
     "eslint-plugin-import": "2.25.2",
     "firebase-tools": "^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~4.0.0",
+    "jasmine-core": "~4.1.0",
     "jsonc-parser": "^3.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "open": "^7.0.3",
-    "typescript": "~4.6.4"
+    "typescript": "~4.7.2"
   }
 }
