chore: remove obsolete schematics from angular.json

--- a/angular.json
+++ b/angular.json
@@ -5,11 +5,7 @@
   "projects": {
     "angular-heroes": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:application": {
-          "strict": true
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
