Upgrade to Angular 16

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -214,6 +214,7 @@
   "plugins": [
     "eslint-plugin-import",
     "@babel",
-    "deprecation"
+    "deprecation",
+    "@typescript-eslint"
   ]
 }
