--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-heroes",
-  "version": "1.4.0",
+  "version": "0.0.0",
   "description": "Angular Heroes",
   "authors": [
     "Aristeidis Bampakos"
@@ -15,43 +15,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.0.4",
-    "@angular/cdk": "17.0.1",
-    "@angular/common": "17.0.4",
-    "@angular/compiler": "17.0.4",
-    "@angular/core": "17.0.4",
-    "@angular/fire": "16.0.0",
-    "@angular/forms": "17.0.4",
-    "@angular/material": "17.0.1",
-    "@angular/platform-browser": "17.0.4",
-    "@angular/platform-browser-dynamic": "17.0.4",
-    "@angular/router": "17.0.4",
+    "@angular/animations": "18.2.4",
+    "@angular/cdk": "18.2.4",
+    "@angular/common": "18.2.4",
+    "@angular/compiler": "18.2.4",
+    "@angular/core": "18.2.4",
+    "@angular/forms": "18.2.4",
+    "@angular/material": "18.2.4",
+    "@angular/platform-browser": "18.2.4",
+    "@angular/platform-browser-dynamic": "18.2.4",
+    "@angular/router": "18.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.3",
-    "@angular-eslint/builder": "^17.1.0",
-    "@angular-eslint/eslint-plugin": "^17.1.0",
-    "@angular-eslint/eslint-plugin-template": "^17.1.0",
-    "@angular-eslint/schematics": "17.1.0",
-    "@angular-eslint/template-parser": "^17.1.0",
-    "@angular/cli": "17.0.3",
-    "@angular/compiler-cli": "17.0.4",
+    "@angular-devkit/build-angular": "^18.2.4",
+    "@angular-eslint/builder": "^18.3.1",
+    "@angular-eslint/eslint-plugin": "^18.3.1",
+    "@angular-eslint/eslint-plugin-template": "^18.3.1",
+    "@angular-eslint/schematics": "18.3.1",
+    "@angular-eslint/template-parser": "^18.3.1",
+    "@angular/cli": "18.2.4",
+    "@angular/compiler-cli": "18.2.4",
     "@babel/eslint-plugin": "^7.14.5",
     "@types/jasmine": "~5.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-deprecation": "^1.3.2",
-    "eslint-plugin-import": "2.25.2",
-    "jasmine-core": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-import": "^2.30.0",
+    "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.5.4"
   }
 }
